<resources>

    <!-- App headers/name -->
    <string name="app_name">TrueMPG</string>
    <string name="title_activity_login">TrueMPG - Login</string>
    <string name="title_activity_add_mpg">TrueMPG - Add MPG Data</string>
    <string name="title_activity_add_vehicle">TrueMPG - Add a Vehicle</string>
    
    <!-- Login screen -->
    <string name="placeholder">placeholder</string>
    <string name="login_instructions">This is an optional one time setup. Entering an email address will help produce better data by allowing us to segment uploaded data</string>
    <string name="login_email">email</string>
    <string name="login_continue_button">Continue</string>

    <!-- Generic strings -->
    <string name="generic_add_vehicle">Add Vehicle</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_okay">OK</string>

    <!-- Add mpg screen -->
    <string name="add_finding_location">Looking up location&#8230;</string>
    <string name="add_mpg_location">MPG location: </string>
    <string name="add_gallons">Gas (Gallons)</string>
    <string name="add_mileage">Mileage</string>
    <string name="add_add_data">Add Data</string>
    <string name="add_mpg_instructions">Enter updated vehicle info when you fill up, and send it to the server</string>
    <string name="thanks_mpg">Thanks for sending your MPG data</string>
    <string name="add_mpg_need_vehicle">We need you to enter vehicle details before tracking MPG</string>
    
    <!-- Add vehicle screen -->
    <string name="add_vehicle_name">Vehicle Name</string>
    <string name="add_vehicle_instructions">Enter your vehicle information to track a new vehicle</string>
    <string name="add_vehicle_make">Make</string>
    <string name="add_vehicle_model">Model</string>
    <string name="add_vehicle_done">Your vehicle has been added</string>
    <string name="add_vehicle_year">Year</string>
    <string name="add_vehicle_vin">VIN</string>
    
</resources>